# systemInfoReader

./: CMakeLists.txt  README.md  todown.txt
include/: ftpcheck.h  strjob.h
scripts/: cmakeconf.sh
src/: ftpcheck.cpp  main.cpp  strjob.cpp
